fix spacing between label and 'required' tag

--- a/packages/react-components/src/components/TextField/TextField.css
+++ b/packages/react-components/src/components/TextField/TextField.css
@@ -16,6 +16,7 @@
 
 .bcds-react-aria-TextField--Label .required {
   color: var(--typography-color-secondary);
+  padding: var(--layout-padding-none) var(--layout-padding-xsmall);
 }
 
 /* Styles for the text description below the input field */
